# aux-exchange

./: go.mod  go.sum
aptos/api/aux-ts/: package.json
aptos/api/aux-ts/src/indexer/: pyproject.toml
aptos/contract/deployer/: Cargo.toml
aptos/contract/util-for-aptos/: Cargo.toml
firebase/functions/: go.mod  go.sum
firebase/run/pool-stat/: go.mod  go.sum
