[tool.poetry]
name = "aux-indexer"
version = "0.1.0"
description = ""
authors = ["Charles Li <charlie@eastrocklabs.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
black = {version = "^24.3.0", allow-prereleases = true}
pendulum = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
